# openwebui-cli

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.md  RELEASE_NOTES.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: RFC.md
docs/commands/: README.md
docs/guides/: configuration.md
docs/internals/: CODEX_EVALUATION_PROMPT.md  COVERAGE_SUMMARY.md  FINAL_TEST_EXECUTION_REPORT.md  FINAL_TEST_RUN.txt  GEMINI_PROJECT_OVERVIEW.md  HISTORY_FILE_TEST_REPORT.md  HISTORY_TEST_COMMANDS.txt  IMPLEMENTATION_REPORT.md  QUICK_EVAL_PROMPT.md  SWARM_COMPLETION_REPORT.md  TESTING_SUMMARY.md  TEST_REPORT.md  TEST_SUMMARY.md
openwebui_cli/: __init__.py  config.py  errors.py  http.py  main.py
openwebui_cli/commands/: admin.py  auth.py  chat.py  config_cmd.py  models.py  rag.py
tests/: __init__.py  test_admin.py  test_auth.py  test_auth_cli.py  test_chat.py  test_chat_errors_history.py  test_chat_errors_params.py  test_chat_interruption.py  test_chat_nonstreaming.py  test_chat_rag.py  test_chat_request_options.py  test_chat_streaming_basic.py  test_chat_token.py  test_config.py  test_errors.py  test_http.py  test_main_clierror.py  test_main_global_options.py  test_main_version.py  test_models.py  test_rag.py
