[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openwebui-cli"
version = "0.1.0"
description = "Official CLI for OpenWebUI - interact with your OpenWebUI instance from the command line"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "InfraFabric Team" },
]
keywords = ["openwebui", "cli", "llm", "ai", "chat"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "keyring>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
openwebui = "openwebui_cli.main:app"

[project.urls]
Homepage = "https://github.com/dannystocker/openwebui-cli"
Documentation = "https://github.com/dannystocker/openwebui-cli#readme"
Repository = "https://github.com/dannystocker/openwebui-cli.git"
Issues = "https://github.com/dannystocker/openwebui-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["openwebui_cli"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
